--- a/.github/workflows/autodevops-angular-demo-docker-build-deploy.yml
+++ b/.github/workflows/autodevops-angular-demo-docker-build-deploy.yml
@@ -36,8 +36,23 @@ jobs:
       - name: Install dependencies
         run: npm ci
 
+      - name: Check for lint script
+        id: lint-check
+        run: |
+          if jq -e '.scripts.lint' package.json > /dev/null; then
+            echo "has_lint=true" >> "$GITHUB_OUTPUT"
+          else
+            echo "has_lint=false" >> "$GITHUB_OUTPUT"
+          fi
+        shell: bash
+
       - name: Lint code
+        if: steps.lint-check.outputs.has_lint == 'true'
         run: npm run lint
+
+      - name: Warn if lint script missing
+        if: steps.lint-check.outputs.has_lint == 'false'
+        run: echo "Skipping lint: No 'lint' script found in package.json"
 
       - name: Run tests
         run: npm run test -- --watch=false --browsers=ChromeHeadless
@@ -97,6 +112,7 @@ jobs:
 
       - name: Upload image digest
         run: echo "${{ steps.meta.outputs.tags }}" > image-tags.txt
+
       - name: Upload Docker tags artifact
         uses: actions/upload-artifact@v4
         with:
