--- a/.github/workflows/autodevops-angular-demo-docker.yml
+++ b/.github/workflows/autodevops-angular-demo-docker.yml
@@ -13,101 +13,103 @@ concurrency:
   group: autodevops-angular-demo-docker-${{ github.ref }}
   cancel-in-progress: true
 
-permissions:
-  contents: read
-  id-token: write
-
 jobs:
-  code-scan:
+  codeql:
     name: Code Scanning - CodeQL
     runs-on: ubuntu-latest
-    timeout-minutes: 15
     permissions:
       actions: read
       contents: read
       security-events: write
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
-      - name: Initialize CodeQL
-        uses: github/codeql-action/init@v3
-        with:
-          languages: javascript
-      - name: Perform CodeQL Analysis
-        uses: github/codeql-action/analyze@v3
-
-  lint-and-test:
-    name: Lint and Test
-    runs-on: ubuntu-latest
+    strategy:
+      fail-fast: false
+      matrix:
+        language: [ 'javascript' ]
     timeout-minutes: 20
-    needs: code-scan
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v3
+
+      - name: Initialize CodeQL
+        uses: github/codeql-action/init@v2
+        with:
+          languages: ${{ matrix.language }}
+
+      - name: Autobuild
+        uses: github/codeql-action/autobuild@v2
+
+      - name: Perform CodeQL Analysis
+        uses: github/codeql-action/analyze@v2
+
+  test:
+    name: Run Unit Tests
+    runs-on: ubuntu-latest
+    timeout-minutes: 15
     steps:
       - name: Checkout code
-        uses: actions/checkout@v4
-      - name: Use Node.js 20.x
-        uses: actions/setup-node@v4
+        uses: actions/checkout@v3
+
+      - name: Use Node.js
+        uses: actions/setup-node@v3
         with:
-          node-version: 20.x
+          node-version: 18
+
       - name: Install dependencies
         run: npm ci
-      - name: Lint
-        run: npm run lint
-      - name: Run unit tests
-        run: npm run test -- --watch=false --browsers=ChromeHeadless --no-progress --code-coverage
 
-  build:
+      - name: Run unit tests
+        run: npm run test -- --no-watch --no-progress --browsers=ChromeHeadless
+
+  build-and-dockerize:
     name: Build Angular App and Docker Image
     runs-on: ubuntu-latest
+    needs: test
     timeout-minutes: 20
-    needs: lint-and-test
     steps:
       - name: Checkout code
-        uses: actions/checkout@v4
-      - name: Use Node.js 20.x
-        uses: actions/setup-node@v4
+        uses: actions/checkout@v3
+
+      - name: Use Node.js
+        uses: actions/setup-node@v3
         with:
-          node-version: 20.x
+          node-version: 18
+
       - name: Install dependencies
         run: npm ci
+
       - name: Build Angular app
-        run: npm run build -- --configuration production
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v3
-      - name: Log in to GitHub Container Registry
-        uses: docker/login-action@v3
+        run: npm run build -- --configuration=production
+
+      - name: Log in to DockerHub
+        uses: docker/login-action@v2
         with:
-          registry: ghcr.io
-          username: ${{ github.actor }}
-          password: ${{ secrets.GITHUB_TOKEN }}
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
+
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v2
+
       - name: Build and push Docker image
-        uses: docker/build-push-action@v5
+        uses: docker/build-push-action@v4
         with:
           context: .
-          file: ./Dockerfile
           push: true
-          tags: ghcr.io/${{ github.repository }}:latest,ghcr.io/${{ github.repository }}:${{ github.sha }}
+          tags: ${{ secrets.DOCKERHUB_USERNAME }}/angular-demo:latest
 
   deploy:
     name: Deploy to Docker Host
     runs-on: ubuntu-latest
-    timeout-minutes: 20
-    needs: build
-    if: github.ref == 'refs/heads/main' && github.event_name != 'pull_request'
-    environment:
-      name: production
-      url: ${{ steps.deployment.outputs.url }}
+    needs: build-and-dockerize
+    timeout-minutes: 15
     steps:
-      - name: Deploy to Docker Host
-        id: deployment
-        uses: appleboy/ssh-action@v1.0.3
+      - name: Deploy to self-hosted Docker server
+        uses: appleboy/ssh-action@v0.1.10
         with:
-          host: ${{ secrets.DEPLOY_HOST }}
-          username: ${{ secrets.DEPLOY_USER }}
-          key: ${{ secrets.DEPLOY_KEY }}
+          host: ${{ secrets.DOCKER_HOST }}
+          username: ${{ secrets.DOCKER_USER }}
+          key: ${{ secrets.DOCKER_SSH_KEY }}
           script: |
-            docker login ghcr.io -u ${{ github.actor }} -p ${{ secrets.GITHUB_TOKEN }}
-            docker pull ghcr.io/${{ github.repository }}:latest
-            docker stop angular-demo-docker || true
-            docker rm angular-demo-docker || true
-            docker run -d --name angular-demo-docker -p 80:80 ghcr.io/${{ github.repository }}:latest
-            echo "::set-output name=url::http://${{ secrets.DEPLOY_HOST }}"
+            docker pull ${{ secrets.DOCKERHUB_USERNAME }}/angular-demo:latest
+            docker stop angular-demo || true
+            docker rm angular-demo || true
+            docker run -d --name angular-demo -p 80:80 ${{ secrets.DOCKERHUB_USERNAME }}/angular-demo:latest
