--- a/.github/workflows/autodevops-angular-demo-docker.yml
+++ b/.github/workflows/autodevops-angular-demo-docker.yml
@@ -2,114 +2,122 @@ name: autodevops angular demo docker build deploy
 
 on:
   push:
-    branches: [main]
+    branches:
+      - main
   pull_request:
-    branches: [main]
+    branches:
+      - main
   workflow_dispatch:
 
 concurrency:
   group: autodevops-angular-demo-docker-${{ github.ref }}
   cancel-in-progress: true
 
-permissions:
-  contents: read
-  id-token: write
-
 jobs:
-  test:
+  unit-tests:
     name: Run Unit Tests
     runs-on: ubuntu-latest
-    timeout-minutes: 10
+    timeout-minutes: 15
 
     steps:
-      - uses: actions/checkout@v3
+      - name: Checkout repository
+        uses: actions/checkout@v3
 
-      - name: Use Node.js 16.x
+      - name: Set up Node.js
         uses: actions/setup-node@v3
         with:
-          node-version: '16.x'
+          node-version: '18.20.2'
 
       - name: Install dependencies
-        run: npm install
+        run: npm ci
 
-      - name: Run Unit Tests
-        run: npm run test -- --watch=false --browsers=ChromeHeadless --no-progress --code-coverage
-
-    continue-on-error: false
+      - name: Run unit tests
+        run: npm run test -- --watch=false --browsers=ChromeHeadless --no-progress
 
   codeql:
     name: Code Scanning - CodeQL (javascript)
-    needs: test
+    needs: unit-tests
     runs-on: ubuntu-latest
     timeout-minutes: 20
-    if: ${{ needs.test.result == 'success' }}
+
+    permissions:
+      actions: read
+      contents: read
+      security-events: write
+
+    strategy:
+      fail-fast: false
+      matrix:
+        language: [ 'javascript' ]
 
     steps:
-      - uses: actions/checkout@v3
+      - name: Checkout repository
+        uses: actions/checkout@v3
 
       - name: Initialize CodeQL
         uses: github/codeql-action/init@v2
         with:
-          languages: javascript
+          languages: ${{ matrix.language }}
+
+      - name: Autobuild
+        uses: github/codeql-action/autobuild@v2
 
       - name: Perform CodeQL Analysis
         uses: github/codeql-action/analyze@v2
 
-  build:
+  build-and-docker:
     name: Build Angular App and Docker Image
-    needs: [test, codeql]
+    needs: unit-tests
     runs-on: ubuntu-latest
-    timeout-minutes: 15
-    if: ${{ needs.test.result == 'success' && needs.codeql.result == 'success' }}
+    timeout-minutes: 20
 
     steps:
-      - uses: actions/checkout@v3
+      - name: Checkout repository
+        uses: actions/checkout@v3
 
-      - name: Use Node.js 16.x
+      - name: Set up Node.js
         uses: actions/setup-node@v3
         with:
-          node-version: '16.x'
+          node-version: '18.20.2'
 
       - name: Install dependencies
-        run: npm install
+        run: npm ci
 
       - name: Build Angular app
-        run: npm run build -- --configuration=production
+        run: npm run build -- --configuration production
 
-      - name: Login to Docker Registry
-        env:
-          DOCKER_REGISTRY: ${{ secrets.DOCKER_REGISTRY }}
-          DOCKER_REGISTRY_USERNAME: ${{ secrets.DOCKER_REGISTRY_USERNAME }}
-          DOCKER_REGISTRY_PASSWORD: ${{ secrets.DOCKER_REGISTRY_PASSWORD }}
-        run: echo "${DOCKER_REGISTRY_PASSWORD}" | docker login "${DOCKER_REGISTRY}" -u "${DOCKER_REGISTRY_USERNAME}" --password-stdin
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v2
 
-      - name: Build Docker image
-        env:
-          DOCKER_REGISTRY: ${{ secrets.DOCKER_REGISTRY }}
-        run: docker build -t "${DOCKER_REGISTRY}/angular-demo-docker:${{ github.sha }}" .
+      - name: Login to DockerHub
+        uses: docker/login-action@v2
+        with:
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
 
-      - name: Push to Docker Registry
-        env:
-          DOCKER_REGISTRY: ${{ secrets.DOCKER_REGISTRY }}
-        run: docker push "${DOCKER_REGISTRY}/angular-demo-docker:${{ github.sha }}"
+      - name: Build and push Docker image
+        uses: docker/build-push-action@v4
+        with:
+          context: .
+          file: ./Dockerfile
+          push: true
+          tags: ${{ secrets.DOCKER_USERNAME }}/angular-demo-docker:latest
 
   deploy:
     name: Deploy to Docker Host
-    needs: build
+    needs: build-and-docker
     runs-on: ubuntu-latest
-    timeout-minutes: 15
-    if: ${{ needs.build.result == 'success' }}
+    timeout-minutes: 10
 
     steps:
-      - name: SSH and Deploy on Docker Host
-        uses: appleboy/ssh-action@v0.1.7
+      - name: SSH Deployer
+        uses: appleboy/ssh-action@v0.1.10
         with:
-          host: ${{ secrets.DOCKER_HOST }}
-          username: ${{ secrets.DOCKER_HOST_USER }}
-          key: ${{ secrets.DOCKER_HOST_SSH_KEY }}
+          host: ${{ secrets.DEPLOY_HOST }}
+          username: ${{ secrets.DEPLOY_USER }}
+          password: ${{ secrets.DEPLOY_PASS }}
           script: |
-            docker login ${{ secrets.DOCKER_REGISTRY }} -u ${{ secrets.DOCKER_REGISTRY_USERNAME }} -p ${{ secrets.DOCKER_REGISTRY_PASSWORD }}
-            docker pull ${{ secrets.DOCKER_REGISTRY }}/angular-demo-docker:${{ github.sha }}
+            docker pull ${{ secrets.DOCKER_USERNAME }}/angular-demo-docker:latest
             docker stop angular-demo-docker || true
             docker rm angular-demo-docker || true
-            docker run -d --name angular-demo-docker -p 80:80 ${{ secrets.DOCKER_REGISTRY }}/angular-demo-docker:${{ github.sha }}
+            docker run -d --name angular-demo-docker -p 80:80 ${{ secrets.DOCKER_USERNAME }}/angular-demo-docker:latest
