--- a/.github/workflows/autodevops-angular-demo-docker-build-deploy.yml
+++ b/.github/workflows/autodevops-angular-demo-docker-build-deploy.yml
@@ -15,124 +15,95 @@ concurrency:
 
 permissions:
   contents: read
-  id-token: write
   packages: write
+  id-token: write
 
 jobs:
-  lint-and-test:
-    name: Lint and Test Angular App
+  build-angular:
+    name: Build Angular Application
     runs-on: ubuntu-latest
-    timeout-minutes: 15
+    timeout-minutes: 20
     steps:
-      - name: Checkout Code
+      - name: Checkout code
         uses: actions/checkout@v4
+
       - name: Use Node.js 20.x
         uses: actions/setup-node@v4
         with:
-          node-version: 20.x
+          node-version: '20.x'
           cache: 'npm'
-      - name: Install Dependencies
+
+      - name: Install dependencies
         run: npm ci
-      - name: Lint Code
+
+      - name: Lint application
         run: npm run lint
-      - name: Run Unit Tests
-        run: npm run test -- --watch=false --browsers=ChromeHeadless
-      - name: Upload Test Results
-        if: always()
+
+      - name: Run tests
+        run: npm test -- --watch=false --browsers=ChromeHeadless --no-progress --code-coverage
+
+      - name: Build production
+        run: npm run build -- --configuration=production
+
+      - name: Upload build artifacts
         uses: actions/upload-artifact@v4
         with:
-          name: test-results
-          path: ./coverage/
-  build:
-    name: Angular Build
-    runs-on: ubuntu-latest
-    timeout-minutes: 20
-    needs: lint-and-test
-    steps:
-      - name: Checkout Code
-        uses: actions/checkout@v4
-      - name: Use Node.js 20.x
-        uses: actions/setup-node@v4
-        with:
-          node-version: 20.x
-          cache: 'npm'
-      - name: Install Dependencies
-        run: npm ci
-      - name: Build Angular App
-        run: npm run build
-      - name: Upload Build Artifacts
-        uses: actions/upload-artifact@v4
-        with:
-          name: dist
+          name: angular-dist
           path: dist/
-  docker-build-push:
+          retention-days: 2
+
+  dockerize:
     name: Build and Push Docker Image
+    needs: build-angular
     runs-on: ubuntu-latest
     timeout-minutes: 20
-    needs: build
-    if: github.ref == 'refs/heads/main'
-    env:
-      IMAGE_NAME: ghcr.io/${{ github.repository }}
     steps:
-      - name: Checkout Code
+      - name: Checkout code
         uses: actions/checkout@v4
-      - name: Download Angular Build Artifacts
+
+      - name: Download build artifacts
         uses: actions/download-artifact@v4
         with:
-          name: dist
+          name: angular-dist
           path: dist
+
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
-      - name: Authenticate to GHCR
+
+      - name: Log in to GitHub Container Registry
         uses: docker/login-action@v3
         with:
           registry: ghcr.io
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
-      - name: Build and Push Docker Image
+
+      - name: Set Docker image name
+        id: docker_image
+        run: |
+          IMAGE="ghcr.io/${{ github.repository }}/angular-demo:$(echo $GITHUB_SHA | head -c7)"
+          echo "image=$IMAGE" >> $GITHUB_OUTPUT
+
+      - name: Build and push Docker image
         uses: docker/build-push-action@v5
         with:
           context: .
+          file: Dockerfile
           push: true
           tags: |
-            ${{ env.IMAGE_NAME }}:latest
-            ${{ env.IMAGE_NAME }}:${{ github.sha }}
-          build-args: |
-            DIST_FOLDER=dist
-      - name: Image Digest
-        run: echo "Image built and pushed: $IMAGE_NAME"
-  deploy:
-    name: Deploy to Production
-    runs-on: ubuntu-latest
-    timeout-minutes: 15
-    needs: docker-build-push
-    if: github.ref == 'refs/heads/main'
-    steps:
-      - name: Download Build Artifact
-        uses: actions/download-artifact@v4
-        with:
-          name: dist
-          path: dist
-      - name: Deploy (Placeholder)
-        run: echo "Deploy step - replace this with your deployment logic"
-      - name: Cleanup Artifacts
-        if: always()
-        run: rm -rf dist
+            ${{ steps.docker_image.outputs.image }}
+            ghcr.io/${{ github.repository }}/angular-demo:latest
 
-  code-scanning:
-    name: CodeQL Static Security Analysis
+      - name: Image digest
+        run: echo "IMAGE: ${{ steps.docker_image.outputs.image }}"
+
+  deploy:
+    name: Deploy Angular Docker Image
+    needs: dockerize
     runs-on: ubuntu-latest
+    if: github.ref == 'refs/heads/main' && github.event_name != 'pull_request'
     timeout-minutes: 15
-    permissions:
-      security-events: write
-      actions: read
-      contents: read
     steps:
-      - name: Checkout repository
-        uses: actions/checkout@v4
-      - name: Initialize CodeQL
-        uses: github/codeql-action/init@v3
-        with:
-          languages: javascript
-      - name: Perform CodeQL Analysis
-        uses: github/codeql-action/analyze@v3
+      - name: Deploy to Production - Placeholder
+        run: |
+          echo "Deploy image step. Replace with your deployment steps (e.g., kubectl, Helm, SSH)."
+          echo "IMAGE: ghcr.io/${{ github.repository }}/angular-demo:latest"
