--- a/.github/workflows/autodevops-angular-demo-docker-build-deploy.yml
+++ b/.github/workflows/autodevops-angular-demo-docker-build-deploy.yml
@@ -10,124 +10,115 @@ on:
   workflow_dispatch:
 
 concurrency:
-  group: autodevops-angular-demo-docker-build-deploy-${{ github.head_ref || github.run_id }}
+  group: autodevops-angular-demo-docker-${{ github.ref }}
   cancel-in-progress: true
 
 permissions:
   contents: read
+  packages: write
   id-token: write
 
 jobs:
-  build:
-    name: Build Angular Application
+  code-scan:
+    name: Code Scanning
     runs-on: ubuntu-latest
-    timeout-minutes: 20
+    timeout-minutes: 15
     steps:
-      - name: Checkout source code
+      - name: Checkout code
         uses: actions/checkout@v4
-      - name: Set up Node.js 20.x
+      - name: Initialize CodeQL
+        uses: github/codeql-action/init@v3
+        with:
+          languages: javascript-typescript
+      - name: Autobuild
+        uses: github/codeql-action/autobuild@v3
+      - name: Perform CodeQL Analysis
+        uses: github/codeql-action/analyze@v3
+
+  install-and-test:
+    name: Install & Test Angular
+    runs-on: ubuntu-latest
+    timeout-minutes: 15
+    needs: code-scan
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+      - name: Set up Node.js
         uses: actions/setup-node@v4
         with:
-          node-version: 20.x
-          cache: 'npm'
+          node-version: 20
       - name: Install dependencies
         run: npm ci
-      - name: Run lint
+      - name: Lint
         run: npm run lint --if-present
       - name: Run tests
-        run: npm run test -- --no-watch --no-progress --browsers=ChromeHeadlessCI --code-coverage
-        env:
-          CHROME_BIN: /usr/bin/google-chrome
-      - name: Build Angular app
-        run: npm run build -- --configuration=production
-      - name: Upload production build artifact
-        uses: actions/upload-artifact@v4
-        with:
-          name: angular-dist
-          path: dist/
-          retention-days: 3
+        run: npm run test --if-present -- --no-watch --no-progress --browsers=ChromeHeadless
 
-  docker:
-    name: Build and Push Docker Image
+  build-app:
+    name: Build Angular App
     runs-on: ubuntu-latest
-    needs: build
-    timeout-minutes: 15
+    timeout-minutes: 10
+    needs: install-and-test
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+      - name: Set up Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: 20
+      - name: Install dependencies
+        run: npm ci
+      - name: Build App
+        run: npm run build --if-present
+
+  docker-build-push:
+    name: Docker Build & Push
+    runs-on: ubuntu-latest
+    timeout-minutes: 20
+    needs: build-app
+    if: github.ref == 'refs/heads/main'
     permissions:
       contents: read
       packages: write
       id-token: write
+    env:
+      IMAGE_NAME: ghcr.io/${{ github.repository }}
+      IMAGE_TAG: ${{ github.sha }}
     steps:
-      - name: Checkout source code
+      - name: Checkout code
         uses: actions/checkout@v4
-      - name: Download production build artifact
-        uses: actions/download-artifact@v4
-        with:
-          name: angular-dist
-          path: dist/
-      - name: Log in to GitHub Docker registry
+      - name: Log in to GitHub Container Registry
         uses: docker/login-action@v3
         with:
           registry: ghcr.io
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
-      - name: Extract repository name
-        id: repo
-        run: echo "REPO_LOWER=$(echo ${{ github.repository }} | tr 'A-Z' 'a-z')" >> $GITHUB_OUTPUT
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v3
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
       - name: Build and push Docker image
         uses: docker/build-push-action@v5
         with:
           context: .
-          file: Dockerfile
           push: true
-          tags: |
-            ghcr.io/${{ steps.repo.outputs.REPO_LOWER }}:latest
-            ghcr.io/${{ steps.repo.outputs.REPO_LOWER }}:${{ github.sha }}
-          build-args: |
-            BUILD_ENV=production
-      - name: Image digest
-        run: echo "Digest: ${{ steps.docker_build.outputs.digest }}"
+          tags: ${{ env.IMAGE_NAME }}:${{ env.IMAGE_TAG }},${{ env.IMAGE_NAME }}:latest
+          cache-from: type=gha
+          cache-to: type=gha,mode=max
 
   deploy:
-    name: Deploy to Environment
-    runs-on: ubuntu-latest
-    needs: docker
-    timeout-minutes: 10
-    if: github.ref == 'refs/heads/main' && github.event_name != 'pull_request'
-    environment:
-      name: production
-      url: ${{ steps.deploy-env.outputs.deployment_url }}
-    permissions:
-      contents: read
-      deployments: write
-      id-token: write
-    steps:
-      - name: Set deployment output placeholder
-        id: deploy-env
-        run: echo "deployment_url=https://your-deployment-url.example" >> "$GITHUB_OUTPUT"
-
-  codeql:
-    name: Code Scanning - CodeQL
+    name: Deploy to Production
     runs-on: ubuntu-latest
     timeout-minutes: 20
-    permissions:
-      actions: read
-      contents: read
-      security-events: write
-    if: github.event_name != 'pull_request' || github.event.pull_request.head.repo.full_name == github.repository
-    strategy:
-      fail-fast: false
-      matrix:
-        language: [ 'javascript' ]
+    needs: docker-build-push
+    if: github.ref == 'refs/heads/main'
+    environment:
+      name: production
+      url: ${{ steps.deploy.outputs.url }}
     steps:
-      - name: Checkout repository
-        uses: actions/checkout@v4
-      - name: Initialize CodeQL
-        uses: github/codeql-action/init@v3
-        with:
-          languages: ${{ matrix.language }}
-      - name: Autobuild
-        uses: github/codeql-action/autobuild@v3
-      - name: Perform CodeQL Analysis
-        uses: github/codeql-action/analyze@v3
+      - name: Deploy (placeholder)
+        id: deploy
+        run: echo "Implement your deployment logic here. Reference image: ghcr.io/${{ github.repository }}:${{ github.sha }}"
+        env:
+          IMAGE_NAME: ghcr.io/${{ github.repository }}
+          IMAGE_TAG: ${{ github.sha }}
